Port sources in glib and gtk modules to JEP-434